syntax = "proto3";
package ping;

message PingRequest {}

message Pong {}

service PingPong {
  rpc Ping(PingRequest) returns (Pong);
}
